# gantry

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-entrypoint.sh  install.sh  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
claude-skills/gantry-pipeline/: SKILL.md
claude-skills/gantry-pipeline/references/: cli-reference.md  workflow.md
deploy/gcp/: 01-setup-vm.sh  02-secrets.sh  03-deploy.sh  04-register-webhook.md  05-verify.md  06-ci-setup.md  README.md
docs/: cursor-sdk-compatibility.md  migration-agent-architecture.md
docs/decisions/: 2026-07-pivot-decision-needed.md
docs/research/: 2026-07-06-tool-ecosystem-triage.md
gantry/: __init__.py  advance.py  advance_batch.py  advance_dispatch.py  advance_lock.py  checks.py  cli.py  cockpit.py  config.py  cost.py  daemon.py  docker.py  docnav.py  e2e.py  engine.py  failure_detail.py  feedback.py  git.py  herdr.py  invocation.py  labels.py  linear.py  machine.py  mcp.py  notify.py  notify_messages.py  pipeline.py  profiles.py  redact.py  retry.py  review.py  runners.py  sessions.py  ship.py  shipmeta.py  stale_repair.py  state.py  status.py  triage.py  update.py
gantry/backends/: __init__.py  cli.py  cursor_sdk.py  protocol.py  registry.py
gantry/cli/: __init__.py  _shared.py  cost.py  docs.py  linear.py  run_commands.py  system.py  watch.py
gantry/skills/definition/: SKILL.md
gantry/skills/design/: SKILL.md
gantry/skills/evidence/: SKILL.md
gantry/skills/investigation/: SKILL.md
gantry/skills/plan/: SKILL.md
gantry/skills/research/: SKILL.md
gantry/skills/spec/: SKILL.md
gantry/templates/: gantry.toml
gantry/templates/prompts/: build.md  definition.md  design.md  evidence.md  investigation.md  plan.md  research.md  review-spec.md  review-standards.md  review.md  spec.md
scripts/: advance_flow.py  check_domain_rules.py  check_scope.py  common.py  create_run.py  decide_release.py  evaluate_result.py  gantry-herdr.sh  record_answer.py  reviewer_gate.py  run_checks.py  run_review.py  run_stage.py  send_question.py  start_flow.py  telegram_bot.py  telegram_reply_watcher.py  trigger_claude_plan.py
tests/: test_advance.py  test_advance_lock.py  test_backends.py  test_checks.py  test_cli.py  test_cockpit.py  test_config.py  test_contract_parity.py  test_cost.py  test_cursor_sdk_backend.py  test_cursor_sdk_smoke.py  test_daemon.py  test_definition_and_dispatch.py  test_docker.py  test_docnav.py  test_e2e.py  test_engine.py  test_feedback.py  test_git.py  test_invocation.py  test_linear.py  test_machine.py  test_mcp.py  test_merge_base_into_worktree.py  test_pipeline_e2e.py  test_profiles.py  test_redact.py  test_retry.py  test_review.py  test_runners.py  test_sessions.py  test_ship.py  test_status.py  test_sync_local_base_branch.py  test_triage.py  test_verification_stages.py  test_watch.py
tests/fixtures/: legacy_sessions.json
