[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gantry-cli"
version = "0.1.0"
description = "Project-agnostic, staged, autonomous build pipeline for coding agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Vanshaj" }]
keywords = ["agent", "pipeline", "claude-code", "cursor", "automation", "ci"]
dependencies = []  # stdlib-only core (tomllib, urllib, subprocess)

[project.optional-dependencies]
py310 = ["tomli>=2.0; python_version < '3.11'"]

[project.scripts]
gantry = "gantry.cli:main"

[tool.setuptools]
packages = ["gantry"]

[tool.setuptools.package-data]
gantry = ["templates/*.toml", "templates/prompts/*.md"]
