[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gantry-cli"
version = "0.1.0"
description = "Project-agnostic, staged, autonomous build pipeline for coding agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Vanshaj" }]
keywords = ["agent", "pipeline", "claude-code", "cursor", "automation", "ci"]
dependencies = [
    "cursor-sdk>=1.0.24,<2",
    "rich>=13",  # in-process markdown rendering for `gantry docs --nav`'s
                 # content pane (headers/tables/code, real terminal color) —
                 # everything else stays stdlib-only (tomllib, urllib, subprocess)
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Software Development :: Build Tools",
]

# [project.urls] — add Homepage/Repository once this is pushed to a remote.

[project.scripts]
gantry = "gantry.cli:main"

[tool.setuptools]
packages = ["gantry", "gantry.backends", "gantry.cli"]

[tool.setuptools.package-data]
gantry = ["templates/*.toml", "templates/prompts/*.md"]

[tool.ruff]
line-length = 132
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.coverage.run]
source = ["gantry"]
branch = true

[tool.coverage.report]
fail_under = 68
show_missing = true
skip_empty = true
